<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="@string/general_setting">

        <SwitchPreference
            android:id="@+id/preference_theme"
            android:defaultValue="false"
            android:key="key_preference_theme"
            android:title="@string/theme" />


        <ListPreference
            android:entries="@array/list_text_size_titles"
            android:entryValues="@array/list_text_size_values"
            android:key="key_preference_text_size"
            android:defaultValue="18"
            android:title="@string/text_size" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/information">

        <Preference
            android:key="key_preference_version"
            android:summary="@string/version_num"
            android:textIsSelectable="false"
            android:title="@string/version" />

        <Preference
            android:key="key_preference_report"
            android:textIsSelectable="false"
            android:title="@string/report" />

        <Preference
            android:key="key_preference_rate"
            android:textIsSelectable="false"
            android:title="@string/rate" />

    </PreferenceCategory>


</PreferenceScreen>